# ResNet-LibTorch

./: .gitignore  CMakeLists.txt  inference.cpp  main.cpp  model.hpp
examples/: CMakeLists.txt  inference.cpp  train.cpp
include/rnlt/: cifar.hpp  model.hpp
src/: CMakeLists.txt  cifar.cpp  model.cpp
